--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+doc/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -40,4 +41,3 @@ build/
 ### mvnw.cmd ###
 ### pom.xml ###
 ### src/main/resources/
-doc
